<resources>
    <string name="app_name">WeatherApp</string>
    <string name="status_weather">Облачность</string>
    <string name="temperature">30°</string>
    <string name="feels_temperature">26°</string>
    <string name="feels_humidity">87%</string>
    <string name="weatherForecast">Прогноз на 24 ч</string>
    <string name="time1">11:00</string>
    <string name="degrees1">30°</string>
    <string name="today">Сегодня</string>
    <string name="status_today">Дождь</string>
    <string name="today_degrees">29°</string>
    <string name="new_york">New-York</string>
    <string name="london">London</string>
    <string name="moscow">Moscow</string>
    <string name="speed_of_wind">Скорость ветра</string>
    <string name="pressure">Давление</string>
    <string name="weather_show">Show</string>
    <string name="saveData">Для сохранения данных при повороте</string>
    <string name="More">Подробнее</string>
    <string name="prev_disp_cities">Раннее отображенные города</string>
    <string name="show">Show</string>
    <string name="hint">hint</string>
    <string name="city">City</string>
    <string name="item4">item4</string>
    <string name="menu">Menu</string>
    <string name="about_developers">О разработчиках</string>
    <string name="main">main</string>
    <string name="home_screen">Главный экран</string>
    <string name="options">Настройки</string>
    <array name="Cities">
        <item>Moscow</item>
        <item>London</item>
        <item>New-York</item>
    </array>
    <array name="temps">
        <item>30°</item>
        <item>29°</item>
        <item>28°</item>
        <item>27°</item>
        <item>26°</item>
    </array>
</resources>
