<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="0.35"
        android:text="@string/today"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="0.15"
        android:src="@drawable/cloud_with_drops" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:text="@string/status_today"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:text="@string/today_degrees"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />
</LinearLayout>

