<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/weather_fon"
    android:id="@+id/act_2">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/backgroundspinner"
            android:entries="@array/Cities" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/speed_of_wind"
            android:textColor="#fff"
            android:textSize="18sp"
            android:theme="@style/MyCheckBox" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pressure"
            android:textColor="#fff"
            android:textSize="18sp"
            android:theme="@style/MyCheckBox" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_effect"
            android:text="@string/weather_show"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07785888" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93917274" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="160dp"
        android:gravity="center"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:text="@string/show"
        android:textAllCaps="false"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="TextView"
        style="@style/TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>