<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_fon"
    android:scaleType="centerCrop">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.01" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.07055961" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/status_weather"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatImageView2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/city" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/temperature"
                    android:textColor="@color/colorWhite"
                    android:textSize="60sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/textView" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/sun_and_clouds_clipart_png"
                    app:layout_constraintBottom_toBottomOf="@id/barrier2"
                    app:layout_constraintEnd_toEndOf="@id/weatherByHour"
                    app:layout_constraintStart_toEndOf="@id/textView5"
                    app:layout_constraintTop_toTopOf="@id/textView" />


                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="textView2"
                    tools:layout_editor_absoluteY="602dp" />

                <ImageView
                    android:id="@+id/feelWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_accessibility_black_24dp"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/barrier" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_temperature"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@id/feelWeather"
                    app:layout_constraintTop_toTopOf="@id/barrier" />

                <ImageView
                    android:id="@+id/humidityImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_invert_colors_black_24dp"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@id/barrier" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_humidity"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatImageView2"
                    app:layout_constraintTop_toTopOf="@id/barrier" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="textView3,textView4,humidityImage,feelWeather"
                    tools:layout_editor_absoluteY="253dp" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/weatherForecast"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="@id/barrier2" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/weatherByHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backgroundspinner2"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/textView5">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/backgroundspinner2"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
                    app:layout_constraintStart_toStartOf="@+id/feelWeather"
                    app:layout_constraintTop_toBottomOf="@id/weatherByHour" />


                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/prev_displ_cities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="invisible"
                    android:text="@string/prev_disp_cities"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/backgroundspinner2"
                    android:visibility="invisible"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="@+id/recycler_view2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/prev_displ_cities" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_effect"
                    android:text="@string/More"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="@+id/recycler_view2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view3" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </HorizontalScrollView>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />



</androidx.constraintlayout.widget.ConstraintLayout>

